<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bwq="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/deleteItem"
    android:orderInCategory="100"
    app:showAsAction="always"
    android:title="@string/add_task"
    android:icon="@drawable/ic_delete_black_24dp" />

    <item
    android:id="@+id/settings"
    android:orderInCategory="200"
    app:showAsAction="ifRoom"
    android:title="@string/settings"
    android:icon="@drawable/ic_settings_black_24dp"
    />

    <item android:id="@+id/menu_item_share"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:title="@string/share"
        bwq:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:icon="@drawable/ic_share_black_24dp"/>
</menu>
